feat(cache): Added Cache (Redis) to not over limit api requests

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,9 +4,15 @@ app {
     port = 8080
     timeout = 40 seconds
   }
+
   one-frame {
     uri: "http://localhost:8090/rates"
     token: "10dc303535874aeccc86a8251e6992f5"
+  }
+
+  redis {
+    uri = "redis://127.0.0.1"
+    prefix = "paidy-forex"
   }
 }
 
