--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,161 +1,14 @@
-version = "3.5.8"
-
-align {
-  preset = none
-  stripMargin = yes
-  tokens = [
-    {code = ":=", owner = "Term.ApplyInfix"},
-    {code = "%", owner = "Term.ApplyInfix"},
-    {code = "%%", owner = "Term.ApplyInfix"},
-    {code = "%%%", owner = "Term.ApplyInfix"}
-  ]
-}
-
-assumeStandardLibraryStripMargin = no
-
-danglingParentheses {
-  exclude = []
-}
-
-docstrings {
-  forceBlankLineBefore = no
-  oneline = keep
-  style = SpaceAsterisk
-  wrap = no
-}
-
-fileOverride {
-  "glob:**/*.sbt" {
-    runner {
-      # https://scalameta.org/scalafmt/docs/configuration.html#scala-dialects
-      dialect = Scala212
-    }
-  }
-
-  "glob:**/project/*.scala" {
-    runner {
-      # https://scalameta.org/scalafmt/docs/configuration.html#scala-dialects
-      dialect = Scala213source3
-    }
-  }
-}
-
-includeNoParensInSelectChains = yes
-
-indent {
-  ctrlSite = 4
-  caseSite = 5
-  withSiteRelativeToExtends = 3
-  commaSiteRelativeToExtends = 8
-}
-
-indentOperator {
-  exemptScope = all
-}
-
-lineEndings = preserve
-
-maxColumn = 100
-
-newlines {
-  alwaysBeforeElseAfterCurlyIf = yes
-  avoidInResultType = yes
-  avoidForSimpleOverflow = [slc]
-  beforeCurlyLambdaParams = multilineWithCaseOnly
-  implicitParamListModifierForce = [after]
-  inInterpolation = avoid
-
-  topLevelStatementBlankLines = [
-    {
-      blanks {
-        beforeAll = -1,
-        afterAll = -1,
-        beforeEndMarker = -1
-      }
-
-      minBreaks = 0
-    },
-    {
-      blanks {
-        beforeAll = -1,
-        before = 1,
-        after = 1,
-        afterAll = -1,
-        beforeEndMarker = -1
-      }
-
-      minBreaks = 1
-    }
-  ]
-}
-
-project {
-  excludeFilters = [
-    ".metals"
-  ]
-  excludePaths = [
-    "glob:**/scripts/scala-cli/**"
-    "glob:**/target/*/src_managed/**.scala"
-    "glob:**/target/streams/compile/**.scala"
-  ]
-}
-
-rewrite {
-  imports {
-    expand = true
-    groups = [
-      ["javax?\\..*"],
-      ["scala\\..*"],
-      [".*"],
-    ]
-    sort = ascii
-  }
-
-  redundantBraces {
-    ifElseExpressions = yes
-  }
-
-  rules = [
-    Imports
-    PreferCurlyFors
-    RedundantBraces
-    RedundantParens
-    SortModifiers
-  ]
-
-  sortModifiers {
-    order = [
-      final
-      sealed
-      abstract
-      override
-      implicit
-      private
-      protected
-      lazy
-    ]
-  }
-}
-
-rewriteTokens {
-  "⇒" = "=>"
-  "→" = "->"
-  "←" = "<-"
-}
-
-runner {
-  # https://scalameta.org/scalafmt/docs/configuration.html#scala-dialects
-  dialect = scala213
-}
-
-spaces {
-  inImportCurlyBraces = yes
-}
-
-trailingCommas = multiple
-
-verticalMultiline {
-  arityThreshold = 3
-  atDefnSite = yes
-  newlineAfterOpenParen = yes
-}
+align.openParenCallSite                      = false
+align.tokens                                 = ["%", "%%", {code = "=>", owner = "Case"}, {code = "=", owner = "(Enumerator.Val|Defn.(Va(l|r)|Def|Type))"}, ]
+align.arrowEnumeratorGenerator               = true
+binPack.parentConstructors                   = false
+danglingParentheses                          = true
+maxColumn                                    = 120
+newlines.afterImplicitKWInVerticalMultiline  = true
+newlines.beforeImplicitKWInVerticalMultiline = true
+project.excludeFilters                       = [ .scalafmt.conf ]
+project.git                                  = true
+rewrite.rules                                = [PreferCurlyFors, RedundantBraces, RedundantParens, SortImports]
+spaces.inImportCurlyBraces                   = true
+style                                        = defaultWithAlign
+unindentTopLevelOperators                    = true
